# hd2-stratagem

./: Cargo.toml  config.txt.example  readme.md
src/: main.rs
src/utils/: log.rs  mod.rs  str_helper.rs  stratagems.rs  windows.rs
