[package]
name = "hd2-stratagem"
version = "1.0.0"
edition = "2024"

[dependencies]
enigo = "0.2.0"
rdev = "0.5.2"
time = { version = "0.3.47", features = ["local-offset", "macros", "serde"] }
chrono = "0.4.43"
once_cell = "1.21.3"
dialoguer = "0.11"
console = "0.16.2"
windows = { version = "0.56.0", features = ["Win32_System", "Win32_System_Threading", "Win32_System_ProcessStatus"] }